# 0050ProjectOthers

./: .gitignore  CLAUDE.md  README.md  claude-progress.txt  feature_list.json  init.sh  package-lock.json  package.json  progress.md  快速开始.md  项目说明文档.md  高维公众号分析.xlsx
AI.long-running-agents/: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  稿件分析报告_慢就是快.md
AI.long-running-agents/config/: long-agents.yaml
AI.long-running-agents/data/: 2026-02-26_36氪_消息称三星电子将停产2DNAND_闪存，原有产线用于1c_nm_DRAM内存制程.md  input_template.csv
AI.long-running-agents/docs/: 2026激励测算-财务数据需求.md  CONVENTIONS.md  effective-harnesses-for-long-running-agents-zh.md  effective-harnesses-for-long-running-agents.md  测算报告-多场景对比.md
AI.long-running-agents/docs/plans/: 2025-02-14-long-running-agents-design.md  2025-02-14-long-running-agents-implementation.md  progress-2025-02-14.md
AI.long-running-agents/src/: __main__.py  bonus_calculator.py  cli.py  run_calculator.py
AI.long-running-agents/src/agents/: base.py  coder.py  initializer.py  manager.py
AI.long-running-agents/src/commands/: ask.py  init.py  (+4 more)
AI.long-running-agents/tests/: test_agents.py  test_coder.py  test_config.py  test_feature_list.py  test_git_integrator.py  test_initializer.py  test_llm.py
Tool.DeepSeek/: .gitignore  README.md  pyproject.toml  requirements.txt
Tool.DeepSeek/My Deepseek/: analyze_qa.py  extract_knowledge.py  process_log.json  兴趣分析数据.json  精选有价值对话.md
Tool.DeepSeek/obsidian_vault/: process_log.json
Tool.DeepSeek/scripts/: analyze_interests.py  process_for_obsidian.py
Tool.DeepSeek/信息萃取/: 儿子洋洋.md
(+5319 files in other folders)
